<resources>
    <string name="app_name">RenoReady</string>
    <string name="app_logo">App Logo</string>
    <string name="email">Email:</string>
    <string name="placement_email">Email</string>
    <string name="email_hint">johndoe@email.com</string>
    <string name="password">Password:</string>
    <string name="placementText_password">Password</string>
    <string name="password_hint">********</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="new_user">New User?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="password_requirements">Password must:\n- Be at least 8 characters or longer\n- Must contain at least one uppercase letter\n- Must contain at least one number</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="camera_icon_description">Camera Icon</string>
    <string name="numProjects">Projects (%d)</string>
    <string name="edit">Edit</string>
    <string name="start_new_project">Starting a new project?</string>
    <string name="create_new_project">CREATE PROJECT</string>
    <string name="project_name_label">Project Name:</string>
    <string name="name_hint">Retro Kitchen</string>
    <string name="category_button_text">Kitchen</string>
    <string name="category_label">Category:</string>
    <string name="category_icon_description">Category Icon</string>
    <string name="task_list_label">Task List:</string>
    <string name="add">+</string>
    <string name="remove">–</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="noTask_text">There are currently no tasks.\nTap the + button to add a new task!</string>
    <string name="deadline_label_hint">Deadline: MM/dd/yyyy</string>
    <string name="current_budget_label">Current Budget:</string>
    <string name="budget_text">$%s</string>
    <string name="no_projects_text">There are currently no projects. Tap the Create Project button to add a new project!</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="save">Save</string>
    <string name="projects_overview">Projects Overview</string>
    <string name="creating_your_account">Creating your account…</string>
    <string name="project_name_placeholder">Project Name</string>
    <string name="done">Done</string>
    <string name="add_task_hint">What is the task?</string>
    <string name="budget_hint">$1000</string>
    <string name="profile">Profile</string>
</resources>