<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/creme_white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/progressOverlay"
            android:layout_width="match_parent"
            android:layout_height="726dp"
            android:background="#33000000"
            android:visibility="gone"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/creme_white"
                android:text="@string/creating_your_account"
                android:layout_gravity="center"/>

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/profilePic_signUp"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/defaultprofilepic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/profile_picture"
                android:clickable="true"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginBottom="4dp"
                android:src="@drawable/ic_camera"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                android:contentDescription="@string/camera_icon_description" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="232dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="282dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:text="@string/email"
            style="@style/textViewStyle.label" />

        <EditText
            android:id="@+id/newEmail_editText"
            android:hint="@string/placement_email"
            android:inputType="textEmailAddress"
            style="@style/editTextStyle"
            android:importantForAutofill="no"/>

        <TextView
            android:layout_marginTop="20dp"
            android:text="@string/password"
            style="@style/textViewStyle.label" />

        <TextView
            style="@style/textViewStyle"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:maxLines="5"
            android:text="@string/password_requirements" />

        <EditText
            android:id="@+id/newPassword_editText"
            style="@style/editTextStyle"
            android:hint="@string/placementText_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:layout_marginTop="20dp"
            android:text="@string/confirm_password"
            style="@style/textViewStyle.label" />

        <EditText
            android:id="@+id/confirmPassword_editText"
            android:hint="@string/placementText_password"
            android:inputType="textPassword"
            style="@style/editTextStyle"
            android:importantForAutofill="no"/>

        <Button
            android:id="@+id/newUser_signUp_button"
            android:text="@string/sign_up"
            android:textSize="25sp"
            android:background="@drawable/brown_button_rounded_corners"
            style="@style/bigButtonStyle" />


    </LinearLayout>


</ScrollView>