<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/creme_white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/numProjects_label"
            style="@style/textViewStyle.label"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="0dp"
            android:text="@string/numProjects"
            android:textColor="@color/dark_brown"
            android:textSize="30sp" />

        <Button
            android:id="@+id/list_edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark_blue"
            android:text="@string/edit" />

    </LinearLayout>

    <ListView
        android:id="@+id/project_listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <TextView
        android:layout_margin="15dp"
        android:id="@+id/no_projects_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/textViewStyle.label"
        android:layout_marginStart="0dp"
        android:textColor="@color/dark_brown"
        android:gravity="center_horizontal"
        android:layout_marginBottom="40dp"
        android:paddingBottom="40dp"
        android:text="@string/no_projects_text"
        android:visibility="visible"/>

</LinearLayout>